cluster-maintenance/clusters/cit-cps-gpu/system/workflows/argo-ui/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argo-ui-from-ingress
  namespace: cps-argo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cps-argo
      app.kubernetes.io/name: argo-workflows-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 2746
